--- a/requirements.txt
+++ b/requirements.txt
@@ -24,15 +24,18 @@ ipdb==0.13.13
 ipython==8.27.0
 jedi==0.19.1
 Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 kiwisolver==1.4.7
 lightning-utilities==0.11.7
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mpmath==1.3.0
+msgpack==1.1.0
 multidict==6.1.0
 networkx==3.3
-numpy==2.1.1
+numpy==1.24.3
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -50,7 +53,10 @@ python-dateutil==2.9.0.post0
 pytorch-lightning==2.3.3
 pytz==2024.2
 PyYAML==6.0.2
+ray==2.37.0
+referencing==0.35.1
 requests==2.32.3
+rpds-py==0.20.0
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
 safetensors==0.4.5
